# libvaraction

./: .gitignore  CMakeLists.txt  README.md
inc/: varaction.h  varassign.h  varbitwise.h  varboolean.h  varcompare.h  varmath.h  varstrings.h  vartimer.h  vartypecast.h
src/: varaction.c  varassign.c  varbitwise.c  varboolean.c  varcompare.c  varmath.c  varstrings.c  vartimer.c  vartypecast.c
